add meteo + css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,12 @@
 
 <body>
     <h1 id="test"></h1>
-    <button id="button">ENVOAYé LOL</button>
+    <table class="col-xs-offset-1 col-xs-10 text-center">
+        <tr id="icone"></tr>
+        <tr id="temp"></tr>
+        <tr id="date"></tr>
+        <tr id="ville"></tr>
+    </table>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="app.js"></script>
