add wind + direction

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <tr id="temp"></tr>
         <tr id="date"></tr>
         <tr id="ville"></tr>
+        <tr id="wind"></tr>
     </table>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
