--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </table>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="http://rawgit.com/Rdyx/Ajax-first-try/master/app.js"></script>
 </body>
 
 </html>
