--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,29 @@
     <title>Document</title>
 </head>
 
-<body>
-    <h1 id="test"></h1>
-    <table class="col-xs-offset-1 col-xs-10 text-center">
-        <tr id="icone"></tr>
-        <tr id="temp"></tr>
-        <tr id="date"></tr>
-        <tr id="ville"></tr>
-        <tr id="wind"></tr>
-    </table>
+<body class="text-center">
+    <div>
+        <table class="col-xs-offset-1 col-xs-10 text-center">
+            <tr id="icone"></tr>
+            <tr id="temp"></tr>
+            <tr id="date"></tr>
+            <tr id="ville"></tr>
+            <tr id="wind"></tr>
+        </table>
+    </div>
+    <div>
+        <ul class="list-unstyled">
+            <li><label for="search">Recherche la météo</label></li>
+            <li><input type="text" id="search"></li>
+            <li><button id="searchGo" class="button">Lancer la recherche</button></li>
+        </ul>
+        <table class="col-xs-offset-1 col-xs-10 text-center">
+            <tr id="icone2"></tr>
+            <tr id="temp2"></tr>
+            <tr id="ville2"></tr>
+            <tr id="wind2"></tr>
+        </table>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="http://rawgit.com/Rdyx/Ajax-first-try/master/app.js"></script>
